# choreonoid-editor

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/ModelEditPlugin/: CMakeLists.txt  EditableModelBase.cpp  EditableModelBase.h  EditableModelItem.cpp  EditableModelItem.h  JointItem.cpp  JointItem.h  LinkItem.cpp  LinkItem.h  MeshShapeItem.cpp  MeshShapeItem.h  ModelEditDragger.h  ModelEditPlugin.cpp  PrimitiveShapeItem.cpp  PrimitiveShapeItem.h  SensorItem.cpp  SensorItem.h
src/ModelEditPlugin/po/: ja.po
